package com.directi.training.dip.solution;

public interface DBInterface {
    public int write(String input);
}

